Fix overflow clipping.

--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,6 @@
 	display: flex;
 	flex-direction: column;
 	width: auto;
-	height: 100vh;
 	flex: 1;
 	justify-content: center;
 	align-items: center;
